[package]
name = "hyper-1-0-native-tls"
version = "0.1.0"
edition = "2021"

[dependencies]
hyper = { version = "1.0.1", features = ["full"] }
http-body-util = "0.1"
hyper-util = { version = "0.1.1", features = ["full"] }
tokio = { version = "1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
native-tls = "0.2.11"
tokio-native-tls = "0.3.1"
base64 = "0.21.5"
